--- a/app/src/main/res/layout/activity_admin_home_screen.xml
+++ b/app/src/main/res/layout/activity_admin_home_screen.xml
@@ -30,15 +30,40 @@
                 android:fontFamily="@font/orbitron"/>
     </LinearLayout>
 
-    <Button
-            android:layout_width="wrap_content"
+
+    <Space
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight = "1"
-            android:text="@string/reportedUsers"/>
+            android:layout_weight="1"/>
+
     <Button
-            android:layout_width="wrap_content"
+            android:layout_width="289dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/black_overlay"
+            android:textColor="@color/whiteBtn"
+            android:text="@string/reportedUsers"
+            android:fontFamily="@font/candal"
+            android:onClick="viewReportedUsersBtnClick"/>
+
+    <Space
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="@string/reportedAds"/>
+            android:layout_weight="1"/>
+
+    <Button
+            android:layout_width="289dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/black_overlay"
+            android:textColor="@color/whiteBtn"
+            android:text="@string/reportedAds"
+            android:fontFamily="@font/candal"
+            android:onClick="viewReportedAdsBtnClick"/>
+    <Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
 
 </LinearLayout>
