--- a/app/src/main/res/layout/activity_admin_home_screen.xml
+++ b/app/src/main/res/layout/activity_admin_home_screen.xml
@@ -7,18 +7,17 @@
         android:orientation="vertical"
         tools:context=".presentation.AdminHomeScreen">
 
+
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="@color/colorPrimaryDark">
 
-        <ImageButton
-                android:layout_width="wrap_content"
+        <include layout="@layout/activity_user_profile_button"
                 android:layout_height="match_parent"
-                android:layout_marginStart="8dp"
-                android:background="@android:color/transparent"
-                android:src="@drawable/baseline_account_box_white_18"/>
+                android:layout_width="wrap_content"
+                android:layout_marginStart="8dp"/>
 
         <TextView
                 android:layout_width="wrap_content"
@@ -29,7 +28,6 @@
                 android:textSize="30sp"
                 android:fontFamily="@font/orbitron"/>
     </LinearLayout>
-
 
     <Space
             android:layout_width="match_parent"
