--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.loginactivity.Login"
-    android:background="@color/colorPrimary"
-    >
+    android:background="@color/colorPrimary">
 
     <TextView
         android:id="@+id/textView_login_loginText"
