--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/imageButton_mainActivty_accountButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
                 android:background="@android:color/transparent"
                 android:src="@drawable/baseline_account_box_white_18"
                 android:onClick="accountBtnClick"/>
