--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,10 @@
             android:orientation="horizontal"
             android:background="@color/colorPrimaryDark">
 
-        <ImageButton
-                android:id="@+id/imageButton_mainActivty_accountButton"
+        <include layout="@layout/activity_user_profile_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginStart="8dp"
-                android:background="@android:color/transparent"
-                android:src="@drawable/baseline_account_box_white_18"
-                android:onClick="accountBtnClick"/>
+                android:layout_marginStart="8dp"/>
 
         <TextView
                 android:layout_width="wrap_content"
