--- a/app/src/main/res/layout/activity_post_ad.xml
+++ b/app/src/main/res/layout/activity_post_ad.xml
@@ -25,7 +25,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_postAd_header"
-        app:layout_constraintVertical_bias="0.168"
+        app:layout_constraintVertical_bias="0.261"
         tools:targetApi="o" />
 
     <EditText
@@ -49,7 +49,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_postAd_title"
-        app:layout_constraintVertical_bias="0.082"
+        app:layout_constraintVertical_bias="0.055"
         tools:targetApi="o" />
 
     <EditText
@@ -71,7 +71,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_postAd_description"
-        app:layout_constraintVertical_bias="0.095"
+        app:layout_constraintVertical_bias="0.098"
         tools:targetApi="o" />
 
     <Button
@@ -120,9 +120,8 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="20dp"
         android:background="@android:drawable/editbox_background"
         android:hint="@string/category"
         android:onClick="selectCategoryBtnClick"
@@ -133,7 +132,27 @@
         app:layout_constraintBottom_toTopOf="@+id/editText_postAd_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_postAd_adType"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@android:drawable/editbox_background"
+        android:hint="@string/type"
+        android:onClick="selectTypeBtnClick"
+        android:textAlignment="viewStart"
+        android:textColor="@android:color/black"
+        android:textColorHint="@color/colorPrimary"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView_postAd_category"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_postAd_header" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_postAd_header"
+        app:layout_constraintVertical_bias="0.695" />
 
 </android.support.constraint.ConstraintLayout>
