--- a/app/src/main/res/layout/activity_set_new_password.xml
+++ b/app/src/main/res/layout/activity_set_new_password.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     android:backgroundTint="@android:color/background_light"
-    tools:context=".presentation.LoginActivity.ForgetPassword">
+    tools:context=".presentation.loginactivity.ForgetPassword">
 
 
     <EditText
