--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context=".presentation.LoginActivity.SignUp">
+    tools:context=".presentation.loginactivity.SignUp">
 
     <TextView
         android:id="@+id/textView_signUp_signUpText"
