--- a/app/src/main/res/layout/activity_users_own_ads.xml
+++ b/app/src/main/res/layout/activity_users_own_ads.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.UserProfileActivity.UsersOwnAds">
+    tools:context=".presentation.userprofileactivity.UsersOwnAds">
 
     <LinearLayout
         android:id="@+id/profile_linear_layout"
