--- a/app/src/main/res/layout/activity_view_ad_current_user.xml
+++ b/app/src/main/res/layout/activity_view_ad_current_user.xml
@@ -53,7 +53,7 @@
     <TextView
         android:id="@+id/textView_viewAdCU_description"
         android:layout_width="515dp"
-        android:layout_height="550dp"
+        android:layout_height="400dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -66,15 +66,15 @@
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.542"
+        app:layout_constraintHorizontal_bias="0.471"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_viewAdCU_price"
-        app:layout_constraintVertical_bias="0.338" />
+        app:layout_constraintVertical_bias="0.094" />
 
 
     <Button
         android:id="@+id/button_viewAdCU_edit"
-        android:layout_width="150dp"
+        android:layout_width="120dp"
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="44dp"
@@ -90,11 +90,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_viewAdCU_description"
-        app:layout_constraintVertical_bias="0.324" />
+        app:layout_constraintVertical_bias="0.604" />
 
     <Button
         android:id="@+id/button_viewAdCU_delete"
-        android:layout_width="150dp"
+        android:layout_width="120dp"
         android:layout_height="50dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
@@ -110,8 +110,46 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_viewAdCU_edit"
-        app:layout_constraintHorizontal_bias="0.102"
+        app:layout_constraintHorizontal_bias="0.098"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_viewAdCU_description"
-        app:layout_constraintVertical_bias="0.319" />
+        app:layout_constraintVertical_bias="0.604" />
+
+    <Button
+        android:id="@+id/button_viewAdCU_repost"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@android:drawable/editbox_background"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:clickable="false"
+        android:onClick="repostBtnClick"
+        android:text="@string/repost"
+        android:textAllCaps="false"
+        android:textColor="@android:color/background_light"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_viewAdCU_edit"
+        app:layout_constraintHorizontal_bias="0.468"
+        app:layout_constraintStart_toEndOf="@+id/button_viewAdCU_delete"
+        app:layout_constraintTop_toBottomOf="@+id/textView_viewAdCU_description"
+        app:layout_constraintVertical_bias="0.604" />
+
+    <TextView
+        android:id="@+id/textView_viewAdCU_expireDate"
+        android:layout_width="515dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/button_viewAdCU_repost"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_viewAdCU_description" />
 </android.support.constraint.ConstraintLayout>
