Modify toast message for reporting ads/users
The toast no longer displays the number of times a ad/user is
reported

--- a/app/src/main/res/layout/activity_user_admin_reported_ads.xml
+++ b/app/src/main/res/layout/activity_user_admin_reported_ads.xml
@@ -29,7 +29,6 @@
             android:background="@android:color/transparent"
             android:backgroundTint="@android:color/holo_red_dark"
             android:onClick="accountBtnClick"
-
             tools:ignore="ContentDescription" />
 
 
@@ -59,6 +58,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reportedAds_linear_layout"
-        app:layout_constraintVertical_bias="0.0"></ListView>
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
