--- a/app/src/main/res/layout/activity_view_ad_other_user.xml
+++ b/app/src/main/res/layout/activity_view_ad_other_user.xml
@@ -67,41 +67,43 @@
 
 
     <Button
-        android:id="@+id/button_viewAdCU_reportAd"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginEnd="8dp"
-        android:background="@android:drawable/editbox_background"
-        android:backgroundTint="@color/black_overlay"
-        android:onClick="reportAdBtnClick"
-        android:text="@string/report_ad"
-        android:textAllCaps="false"
-        android:textColor="@android:color/background_light"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.174"
-        app:layout_constraintStart_toStartOf="parent" />
+            android:id="@+id/button_viewAdCU_reportAd"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="64dp"
+            android:layout_marginEnd="8dp"
+            android:background="@android:drawable/editbox_background"
+            android:backgroundTint="@color/black_overlay"
+            android:onClick="reportAdBtnClick"
+            android:text="@string/report_ad"
+            android:textAllCaps="false"
+            android:textColor="@android:color/background_light"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.169"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="40dp"/>
 
     <Button
-        android:id="@+id/button_viewAdCU_reportUser"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@android:drawable/editbox_background"
-        android:backgroundTint="@color/black_overlay"
-        android:onClick="reportUserBtnClick"
-        android:text="@string/report_user"
-        android:textAllCaps="false"
-        android:textColor="@android:color/background_light"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.279"
-        app:layout_constraintStart_toEndOf="@+id/button_viewAdCU_reportAd" />
+            android:id="@+id/button_viewAdCU_reportUser"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@android:drawable/editbox_background"
+            android:backgroundTint="@color/black_overlay"
+            android:onClick="reportUserBtnClick"
+            android:text="@string/report_user"
+            android:textAllCaps="false"
+            android:textColor="@android:color/background_light"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.282"
+            app:layout_constraintStart_toEndOf="@+id/button_viewAdCU_reportAd"
+            android:layout_marginBottom="40dp"/>
 
 </android.support.constraint.ConstraintLayout>
