Fix some UI on main screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -159,14 +159,15 @@
             android:text="@string/allType"
             android:textAlignment="center"
             android:textColor="@android:color/background_light"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/postAdBtn"
             android:layout_width="289dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="70dp"
+            android:layout_marginStart="30dp"
             android:layout_marginEnd="50dp"
             android:background="@android:drawable/editbox_background"
             android:backgroundTint="@color/black_overlay"
@@ -181,7 +182,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="30dp"
             android:background="@drawable/baseline_sort_white_18"
             android:onClick="sortBtnClick"
             tools:ignore="contentDescription" />
@@ -193,7 +194,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager_mainActivity"
         android:layout_width="match_parent"
-        android:layout_height="710dp"
+        android:layout_height="777dp"
         android:layout_gravity="end"
         android:outlineAmbientShadowColor="@color/colorPrimary"
         android:outlineSpotShadowColor="@color/colorPrimary"
