Fix bug. Fix keyboard popping out. Fix some ids in xmls.
 CopyDatabaseToDevice now on the splashscreen

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -84,6 +84,7 @@
         tools:targetApi="o" />
 
     <Button
+        android:id="@+id/getSecuriityQuestionBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -98,6 +99,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
+        android:id="@+id/answeredSecurityQuestionBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
