Add acceptance test code for profileFeature

--- a/app/src/main/res/layout/activity_profile_information.xml
+++ b/app/src/main/res/layout/activity_profile_information.xml
@@ -22,8 +22,8 @@
         app:layout_constraintBottom_toTopOf="@+id/profileEditBoxName6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.965" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -111,10 +111,10 @@
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.078" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.192" />
 
     <EditText
         android:id="@+id/profileEditBoxPassword"
@@ -160,7 +160,7 @@
         app:layout_constraintTop_toBottomOf="@+id/profileEditBoxQuestion"
         app:layout_constraintVertical_bias="0.121" />
 
-    <EditText
+    <TextView
         android:id="@+id/profileEditBoxQuestion"
         android:layout_width="352dp"
         android:layout_height="wrap_content"
@@ -168,9 +168,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@android:drawable/editbox_background"
-        android:backgroundTint="@android:color/background_light"
+        android:backgroundTint="@color/adPostGreyBackground"
         android:ems="10"
-        android:inputType="text"
+        android:clickable="false"
         android:textColor="@color/colorPrimaryDark"
         android:textColorHint="@color/colorPrimary"
         android:textSize="25sp"
@@ -202,40 +202,6 @@
         app:layout_constraintTop_toBottomOf="@+id/profileEditBoxName6"
         app:layout_constraintVertical_bias="0.073" />
 
-    <ImageButton
-        android:id="@+id/profileImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:backgroundTint="@color/colorPrimaryDark"
-        android:src="@drawable/baseline_account_box_white_36"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.03">
-
-    </ImageButton>
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/photo"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileImage"
-        app:layout_constraintVertical_bias="0.0" />
-
     <EditText
         android:id="@+id/profileEditBoxNumber"
         android:layout_width="352dp"
@@ -258,6 +224,7 @@
         app:layout_constraintVertical_bias="0.1" />
 
     <Button
+        android:id="@+id/profie_info_save"
         android:layout_width="116dp"
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
@@ -265,11 +232,11 @@
         android:layout_marginBottom="8dp"
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@color/black_overlay"
+        android:onClick="profileInformationSaveClick"
         android:text="@string/save"
         android:textColor="@android:color/background_light"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:onClick="profileInformationSaveClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.75"
