--- a/app/src/main/res/layout/activity_post_ad.xml
+++ b/app/src/main/res/layout/activity_post_ad.xml
@@ -75,6 +75,7 @@
         tools:targetApi="o" />
 
     <Button
+        android:id="@+id/button_post_ad"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
