--- a/app/src/main/res/layout/activity_users_own_ads.xml
+++ b/app/src/main/res/layout/activity_users_own_ads.xml
@@ -38,8 +38,8 @@
     <android.support.v7.widget.RecyclerView
 
         android:id="@+id/profile_usersAds_recycle_view"
-        android:layout_width="575dp"
-        android:layout_height="802dp"
+        android:layout_width="match_parent"
+        android:layout_height="890dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
