--- a/app/src/main/res/layout/activity_view_ad_other_user.xml
+++ b/app/src/main/res/layout/activity_view_ad_other_user.xml
@@ -48,7 +48,7 @@
     <TextView
         android:id="@+id/textView_viewAdOU_description"
         android:layout_width="499dp"
-        android:layout_height="398dp"
+        android:layout_height="410dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="8dp"
@@ -73,6 +73,7 @@
         android:layout_marginBottom="8dp"
         android:background="@android:drawable/editbox_background"
         android:hint="@string/fullName"
+        android:textStyle = "bold"
         android:textColorHint="@color/colorPrimary"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -93,6 +94,7 @@
         android:background="@android:drawable/editbox_background"
         android:hint="@string/adOwnerEmail"
         android:textColorHint="@color/colorPrimary"
+        android:textStyle = "bold"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,6 +113,7 @@
         android:layout_marginBottom="8dp"
         android:background="@android:drawable/editbox_background"
         android:hint="@string/adOwnerPhoneNumber"
+        android:textStyle = "bold"
         android:textColorHint="@color/colorPrimary"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
