--- a/app/src/main/res/layout/activity_edit_ad.xml
+++ b/app/src/main/res/layout/activity_edit_ad.xml
@@ -75,6 +75,7 @@
         tools:targetApi="o" />
 
     <Button
+        android:id="@+id/button_editAd_save"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
