Fix layout bug for user ads

--- a/app/src/main/res/layout/activity_users_own_ads.xml
+++ b/app/src/main/res/layout/activity_users_own_ads.xml
@@ -9,7 +9,7 @@
     <LinearLayout
             android:id="@+id/profile_linear_layout"
             android:layout_width="match_parent"
-            android:layout_height="66dp"
+            android:layout_height="70dp"
             android:background="@color/colorPrimaryDark"
             android:gravity="top"
             android:orientation="horizontal"
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="23dp"
+                android:layout_marginStart="20dp"
                 android:fontFamily="@font/orbitron"
                 android:text="@string/myAds"
                 android:textColor="@android:color/background_light"
@@ -37,9 +37,9 @@
 
             android:id="@+id/profile_usersAds_recycle_view"
             android:layout_width="match_parent"
-            android:layout_height="890dp"
+            android:layout_height="match_parent"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="70dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
